[tool.poetry]
name = "proboards-scraper"
version = "0.1.0"
description = ""
authors = ["Najam Syed <najam.r.syed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
selenium = "^3.141.0"
SQLAlchemy = "^1.4.14"
requests = "^2.25.1"
aiohttp = "^3.7.4"
aiofiles = "^0.7.0"
flake8 = "^3.9.2"
cssutils = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
